geocomplete implementation first approach

--- a/geoposition/templates/geoposition/widgets/geoposition.html
+++ b/geoposition/templates/geoposition/widgets/geoposition.html
@@ -1,4 +1,5 @@
-<p class="geoposition-widget">
+<div class="geocomplete-widget">
     {{ latitude.label|capfirst }}: {{ latitude.html }}<br>
-    {{ longitude.label|capfirst }}: {{ longitude.html }}
-</p>
+    {{ longitude.label|capfirst }}: {{ longitude.html }}<br>
+    {{ location.label|capfirst }}: {{location.html}}
+</div>
